wrapping issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -143,7 +143,7 @@ main {
   display: flex;
 }
 
-.books-list:first-child { flex-basis: calc(66.66% - 10px); }
+.books-list:first-child { flex-basis: calc(56.66% - 10px); }
 
 @media (max-width: 736px) {
   .books-list { flex-basis: calc(100% - 10px); }
